Behaviors share project upgrade to 2.2.0.